Basic taskbar implementation
- Made form for new/open vault
- Added dummy selections for remaining operations

--- a/munkey-app/MunkeyApp/MainWindow.xaml
+++ b/munkey-app/MunkeyApp/MainWindow.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:MunkeyApp"
+    xmlns:view="using:MunkeyApp.View"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -15,9 +16,14 @@
         <MenuBar Grid.Row="0">
             <MenuBarItem Title="File">
                 <MenuFlyoutItem Text="New" Click="FileFlyoutNew_Click"/>
+                <MenuFlyoutItem Text="Open" Click="FileFlyoutOpen_Click"/>
+                <MenuFlyoutItem Text="Link Remote" Click="FileFlyoutLinkRemote_Click"/>
+            </MenuBarItem>
+            <MenuBarItem Title="Settings">
+                <MenuFlyoutItem Text="Database" Click="SettingsFlyoutService_Click"/>
             </MenuBarItem>
         </MenuBar>
 
-        <local:LoginPage Grid.Row="1"/>
+        <local:VaultPage x:Name="MainVaultView" Grid.Row="1"/>
     </Grid>
 </Window>
