--- a/munkey-app/MunkeyApp/VaultPage.xaml
+++ b/munkey-app/MunkeyApp/VaultPage.xaml
@@ -73,7 +73,7 @@
                     <TextBlock Text="{x:Bind PasswordCollection.Message, Mode=OneWay}"/>
                     <StackPanel Margin="0,8" Spacing="8" Orientation="Horizontal">
                         <Button Content="Save" Command="{x:Bind PasswordCollection.SavePasswords}" ToolTipService.ToolTip="Commit password changes to the database"/>
-                        <Button Content="Pull" ToolTipService.ToolTip="Check for changes from the network"/>
+                        <Button Content="Pull" Command="{x:Bind PasswordCollection.PullPasswords}" ToolTipService.ToolTip="Check for changes from the network"/>
                     </StackPanel>
                 </StackPanel>
             </Border>
