Expander in GUI for `Link Remote` networking

--- a/munkey-app/MunkeyApp/View/PasswordEntryForm.xaml
+++ b/munkey-app/MunkeyApp/View/PasswordEntryForm.xaml
@@ -17,7 +17,7 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.Row="0" Grid.ColumnSpan="3" Text="New Entry" FontWeight="Bold"/>
+        <TextBlock Grid.Row="0" Grid.ColumnSpan="3" Text="Create/Update Entry" FontWeight="Bold"/>
         <TextBox Grid.Row="1" Grid.Column="0" PlaceholderText="Key" Text="{x:Bind Item.EntryKey, Mode=TwoWay}"/>
         <PasswordBox Grid.Row="1" Grid.Column="1" PlaceholderText="Password" PasswordChanged="PasswordBox_PasswordChanged"/>
         <Button Grid.Row="1" Grid.Column="2" Content="Submit" Click="SubmitButton_Click"/>
