--- a/munkey-app/MunkeyApp/MainWindow.xaml
+++ b/munkey-app/MunkeyApp/MainWindow.xaml
@@ -7,5 +7,5 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-    <local:VaultPage x:Name="MainVaultView" Grid.Row="1"/>
+    <local:VaultPage x:Name="MainVaultView"/>
 </Window>
